<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rewind</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="no_events_today">You do not have any past events. Start by adding one.</string>
    <string name="event_desc">what do you want to remember?</string>
    <string name="event_location">where r you?</string>
    <string name="event_discard">Discard</string>
    <string name="event_cancel">Cancel</string>
    <string name="event_update">Update</string>
    <string name="event_go_back">Go back</string>
    <string name="event_okay">Okay</string>
    <string name="confirm_discard_title">Confirm action</string>
    <string name="confirm_discard_message">All changes will be lost?</string>
    <string name="event_capture">Capture</string>
    <string name="add_event">Record event</string>
    <string name="edit_event">Rewrite event</string>
    <string name="delete_event">Delete</string>
    <string name="settings">Settings</string>
    <string name="list_all_events">List all events</string>
    <string name="narration_title">Enter narration</string>
    <string name="location_title">Enter location</string>
    <string name="date_title">Select date</string>
    <string name="discard_button">Discard</string>
    <string name="capture_button">Capture</string>
    <string name="row_year_hint">YEAR</string>
    <string name="row_location_hint">Location appears here</string>
    <string name="row_narration_hint">This is how the narration appears</string>
    <string name="all_years">All years</string>
    <string name="all_months">All months</string>
	<string name="year_list_title">Select a year</string>
	<string name="month_list_title">Select a month</string> 
	<string name="list_archived_events">List archived events</string>
	<string name="home_event">Home</string>
	<string name="archive_event">Archive</string>
	<string name="unarchive_event">Restore</string>
	<string name="search_event">Search</string>
	<string name="search_hint">Search events</string>
</resources>