<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/eventdesc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:inputType="text"
        android:minLines="5"
        android:scrollbars="vertical"
        android:text="@string/event_desc" />

    <EditText
        android:id="@+id/eventlocation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="@string/event_location" />

    <Button
        android:id="@+id/eventdiscard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/event_discard" />

    <Button
        android:id="@+id/eventcapture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/event_capture" />

</RelativeLayout>