<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff" >
    
    <TextView 
        android:id="@+id/narrationtitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="5dp"
        android:text="@string/narration_title" 
        />
    <EditText
        android:id="@+id/narrationtext"
        android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="top"
		android:minLines="5"
		android:scrollHorizontally="false"
		android:inputType="textMultiLine"
		android:padding="10dp"
		android:textSize="15sp"
		/>
		
     <TextView 
        android:id="@+id/locationtitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:paddingTop="30dp"
        android:text="@string/location_title" 
        />
    <EditText
        android:id="@+id/locationtext"
        android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="top"
		android:minLines="5"
		android:scrollHorizontally="false"
		android:inputType="text"
		android:maxLines="1"
		android:padding="10dp"
		android:textSize="15sp"
		/>
    
     <TextView 
        android:id="@+id/datetitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:paddingTop="30dp"
        android:text="@string/date_title" 
        />
    
    <Button 
        android:id="@+id/datebutton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:paddingTop="40dip"
        android:orientation="horizontal" >
    
        <Button 
            android:id="@+id/discardbutton"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:text="@string/discard_button"
            android:padding="5dp"
            android:textSize="20sp"
            android:minWidth="70sp"
            android:layout_weight="1"
            />
     
        <Button 
            android:id="@+id/capturebutton"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:text="@string/capture_button"
            android:padding="5dp"
            android:textSize="20sp"
            android:layout_weight="1"
            />
        
    </LinearLayout>
    
</LinearLayout>
